# s2t-obs

./: .gitignore  .gitmodules  Makefile  README.md  csm.txt  variables.mk
grpc/: CMakeLists.txt
grpc/cmake/: grpc-config.cmake.in
obs-studio/: CMakeLists.txt
obs-studio/cmake/: obs-config.cmake.in
s2t-obs/: CMakeLists.old.txt  CMakeLists.txt  csm.json
s2t-obs/cmake/Modules/: FindMyGRPC.cmake  FindMyProtobuf.cmake
s2t-obs/protos/: example.proto  s2t.proto
s2t-obs/src/: plugin.cc
s2t-obs/src/backend/: README.md  audio_capture_pipeline.cc  audio_capture_pipeline.h  audio_converter_pipeline.cc  audio_converter_pipeline.h  caption.cc  caption.h  inference_stream.cc  inference_stream.h  overlapping_caption.cc  overlapping_caption.h  post_caption_handler.cc  post_caption_handler.h  raw_result.h  settings.h  threadsafe_cb.h  transcript.h
s2t-obs/src/inference/: Dockerfile  README.md
s2t-obs/src/proto/: example.proto  stt.proto
s2t-obs/src/ui/: caption_dock_widget.cc  caption_dock_widget.h  caption_dock_widget.ui  caption_main_widget.cc  caption_main_widget.h  caption_main_widget.ui  caption_manager.cc  caption_manager.h  caption_settings_widget.cc  caption_settings_widget.h  caption_settings_widget.ui  caption_settings_widget.ui.autosave  open_caption_settings_widget.cc  open_caption_settings_widget.h
s2t-obs/src/util/: utils_ui.h
s2t-obs/src/utils/: backend.h  caption.h  caption_helper.h  random.h  storage.h  strings.h  ui.h  word.h
triton/: README.md
triton/experiments/: convert_torch_to_onnx.py  simple_inference.py  test_audio_register.py
triton/requirements/: base.in  base.txt
triton/src/: simple_server.py
triton/src/proto/: s2t_pb2.py  s2t_pb2_grpc.py
